<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/vehicleEdtText"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="Sedan/ motorcycle/SUv"
        android:inputType="text" />

    <EditText
        android:id="@+id/ColorEditText"
        android:layout_width="284dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Red / Green / Blue"
  />

    <Button
        android:id="@+id/button"
        android:layout_width="271dp"
        android:layout_height="43dp"
        android:text="Set"
 />

    <TextView
        android:id="@+id/vehicleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vehicle"
        />

    <TextView
        android:id="@+id/ColorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Color"
        />
    <EditText
        android:id="@+id/petrolEdiTxt"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="Enter needed patrol"
        android:inputType="number"
/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/petrolButton"
        android:text="buy petrol"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/petrolShow"
        android:text="current petrol"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/diveText"
        android:text="driving"/>


</LinearLayout>
